<resources>
    <string name="app_name">j\'aime le cour d\'android</string>
    <string name="button_test_0">Button test 0</string>
    <string name="bienvenue_chez">Bienvenue chez</string>
    <string name="droitrestaurant">DroitRestaurant</string>
    <string name="dessert">Desserts</string>
    <string name="plats">Plats</string>
    <string name="entr_e">Entrées</string>
    <string name="droidrestaurant">Droidrestaurant</string>
    <string name="entr_es">Entrées</string>
    <string name="todo">TODO</string>
    <string name="todo2">TODO</string>
</resources>