<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" tools:ignore="MissingDefaultResource" android:background="#EDDFDEDE"
        android:foregroundTint="#F1EAEA" android:theme="@style/Theme.AndroidERestaurant">
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" tools:srcCompat="@tools:sample/avatars" android:id="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="48dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            android:visibility="visible" tools:ignore="ImageContrastCheck"
            android:contentDescription="@string/todo"/>
    <TextView
            android:text="@string/bienvenue_chez"
            android:layout_width="154dp"
            android:layout_height="38dp" android:id="@+id/textView3"
            android:textColor="#00897B" android:textStyle="bold"
            android:textSize="24sp" android:fontFamily="cursive"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="620dp"/>
    <TextView
            android:text="@string/droidrestaurant"
            android:layout_width="154dp"
            android:layout_height="38dp" android:id="@+id/textView4"
            android:textColor="#00897B" android:textStyle="bold"
            android:textSize="24sp" android:fontFamily="cursive" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="164dp" android:typeface="normal" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="176dp" android:theme="@style/Theme.AndroidERestaurant"/>
    <TextView
            android:text="@string/entr_es"
            android:layout_width="102dp"
            android:layout_height="48dp" android:id="@+id/Entree"
            android:textSize="34sp" android:textStyle="bold"
            android:textAllCaps="false" android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:fontFamily="cursive" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="304dp" app:layout_constraintHorizontal_bias="0.502" android:textColor="#E53935"
            android:clickable="true" android:focusable="true"/>
    <TextView
            android:text="@string/plats"
            android:layout_width="83dp"
            android:layout_height="48dp" android:id="@+id/Plat"
            android:textSize="34sp" android:textStyle="bold"
            android:textAllCaps="false" android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:fontFamily="cursive" app:layout_constraintTop_toBottomOf="@+id/Entree"
            app:layout_constraintBottom_toTopOf="@+id/Desserts" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:textColor="#E53935" android:clickable="true"
            android:focusable="true"/>
    <TextView
            android:text="@string/dessert"
            android:layout_width="118dp"
            android:layout_height="49dp" android:id="@+id/Desserts"
            android:textSize="34sp" android:textStyle="bold"
            android:textAllCaps="false" android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:fontFamily="cursive" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="164dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:textColor="#E53935" android:clickable="true"
            android:focusable="true"/>
    <View
            android:id="@+id/divider4"
            android:layout_width="433dp"
            android:layout_height="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.571" android:visibility="visible"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toTopOf="@+id/divider5"
            app:layout_constraintVertical_bias="0.746"
            android:background="@color/RE"/>
    <View
            android:id="@+id/divider5"
            android:layout_width="433dp"
            android:layout_height="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.571" android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="244dp"
            android:background="@color/RE"/>

</androidx.constraintlayout.widget.ConstraintLayout>